--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "license": "ISC",
     "dependencies": {
         "bcryptjs": "^2.4.3",
+        "cloudinary": "^1.30.0",
         "colors": "^1.4.0",
         "cors": "^2.8.5",
         "dotenv": "^16.0.1",
@@ -20,6 +21,8 @@
         "joi": "^17.6.0",
         "knex": "^2.0.0",
         "morgan": "^1.10.0",
+        "multer": "^1.4.5-lts.1",
+        "multer-storage-cloudinary": "^4.0.0",
         "passport-jwt": "^4.0.0",
         "pg": "^8.7.3"
     },
